# ai-notes

./: 1.安装Codex.md  2.codex使用进阶.md  README.md  a.好用的AI工具推荐.md  cockpit多api备用.md
个性化设置/: 个性化设置.md
论文写作Skills整理/: 论文写作Skills说明.md
论文写作Skills整理/skills/docx-red-yellow-revision/: SKILL.md
论文写作Skills整理/skills/docx-red-yellow-revision/agents/: openai.yaml
论文写作Skills整理/skills/drawio-technical-diagrams/: SKILL.md
论文写作Skills整理/skills/drawio-technical-diagrams/agents/: openai.yaml
论文写作Skills整理/skills/latex-paper-en/: SKILL.md
论文写作Skills整理/skills/latex-paper-en/agents/: openai.yaml
论文写作Skills整理/skills/latex-paper-en/references/modules/: EXPRESSION.md  LITERATURE.md
论文写作Skills整理/skills/mineru/: LICENSE  README.md  README_CN.md  SKILL.md  pyproject.toml  requirements.txt
论文写作Skills整理/skills/mineru/scripts/: mineru_api.py  mineru_batch.py  mineru_obsidian.py  mineru_parallel.py
论文写作Skills整理/skills/mineru/skills/mineru/: SKILL.md
论文写作Skills整理/skills/pdf-md-review-zotero/: SKILL.md
论文写作Skills整理/skills/research-writing-skill/: SKILL.md
论文写作Skills整理/skills/research-writing-skill/skills/using-research-writing/: SKILL.md
论文写作Skills整理/skills/research-writing-skill/skills/writing-core/: SKILL.md
论文写作Skills整理/skills/scientific-figure-text-translation/: SKILL.md
论文写作Skills整理/skills/scientific-figure-text-translation/agents/: openai.yaml
