[project]
name = "mineru-skill"
version = "2.0.0"
description = "Parse PDFs into clean Markdown using MinerU's VLM engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Nebutra", email = "hello@nebutra.com"}
]
keywords = ["pdf", "markdown", "parser", "latex", "obsidian", "ai-skill"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Nebutra/MinerU-Skill"
Documentation = "https://github.com/Nebutra/MinerU-Skill#readme"
Repository = "https://github.com/Nebutra/MinerU-Skill.git"
Issues = "https://github.com/Nebutra/MinerU-Skill/issues"

[project.scripts]
mineru-parse = "scripts.mineru_v2:main"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
